# ballbot

./: .gitignore
detect/: CMakeCache.txt  CMakeLists.txt  FindBalls.cpp  Makefile  balldetect.cpp  cmake_install.cmake
movement/: backward.c  forward.c  left.c  make.sh  right.c  stop.c  test.c
